# chern

./: .dockerignore  .env.example  .gitignore  DEV_PLAN_PERSON1_FRONTEND.md  IMPLEMENTATION_RESULT.md  LOCAL_WORKING_VERSION_PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/rules/: first-man-part.mdc  second-man-part.mdc  specification.mdc
.github/workflows/: quality-gates.yml
alembic/: env.py
alembic/versions/: 20260410_01_init_schema.py  20260410_02_concert_label.py
docker/: Dockerfile.api  Dockerfile.web
docs/: stage1_merge_alignment.md
docs/implementation plans (completed)/: DEV_PLAN_PERSON2_LLM_BACKEND.md
frontend/: .env.development  dev-server.ps1  index.html  package-lock.json  package.json  vite.config.ts
frontend/js/: auth.js  authPage.js  header.js  helpPage.js  homeUi.js  i18n.js  main.js  mockApi.js  router.js  soundWave.js  turnstile.js
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: BrandText.module.css  ChatPlaceholder.tsx  Forms.module.css  GridLoupeLayer.module.css  GridLoupeLayer.tsx  (+3 more)
frontend/styles/: app.css
scripts/: smoke_api.py  smoke_docker_compose.py  smoke_llm_pipeline.py
src/app/: main.py
src/llm/: __init__.py  cache.py  candidates.example.json  client.py  mock_transport.py  models.py  normalization.py  prompt_changelog.md  run_playlist.py  service.py  transport_factory.py  yandex_transport.py
src/optimizer/: service.py
src/spotify/: client.py  factory.py  http_client.py  link_parse.py  oauth.py
tests/: test_llm_service.py  test_spotify_link_parse.py
(+49 files in other folders)
