[project]
name = "concert-playlist-llm"
version = "0.1.0"
description = "LLM backend module for intent parsing and track tagging"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
